--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,12 @@
- * {
+ body {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  overflow-x: hidden;
+  font-family: 'Roboto', sans-serif;
+}
+
+* {
   margin: 0;
   padding: 0px;
   box-sizing: border-box;
@@ -37,13 +45,14 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
+  width: 100vw;
+} */
 
 h1 {
   font-size: 3.2em;
